<resources>
    <string name="app_name">iGait</string>

    <!-- activity titles -->
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_user_profile_edit">User Profile - Edit</string>
    <string name="title_activity_new_patient">New Patient</string>
    <string name="title_activity_patient_profile">Patient Profile</string>
    <string name="title_activity_patient_profile_edit">Patient Profile - Edit</string>

    <!-- action bar -->
    <string name="action_search">Search Patients</string>
    <string name="action_search_hint">Search for patients.</string>
    <string name="action_user_profile">User Profile</string>
    <string name="action_user_hint">Visit the user profile.</string>
    <string name="action_new_patient">Add New Patient</string>
    <string name="action_new_patient_hint">Add a new patient.</string>
    <string name="action_edit">Edit Profile</string>
    <string name="action_edit_hint">Edit profile.</string>
    <string name="action_logout">Logout</string>
    <string name="action_logout_hint">Logout.</string>
    <string name="action_save">Save</string>
    <string name="action_save_hint">Save changes.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_hint">Cancel changes.</string>
    <string name="action_delete_patient">Delete Patient</string>
    <string name="action_delete_patient_hint">Delete patient.</string>
    <string name="action_change_priority">Change Priority Status</string>
    <string name="action_change_priority_hint">Change priority status.</string>

    <!-- default strings -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- gait health place holders -->
    <string name="box">■</string>
    <string name="pie_empty">○</string>
    <string name="pie_fourth">◔</string>
    <string name="pie_half">◑</string>
    <string name="pie_three_fourths">◕</string>
    <string name="pie_full">●</string>

    <!-- item info holders -->
    <string name="info_left">Info left</string>
    <string name="info_right">Info right</string>
    <string name="separator">-</string>

    <!-- text descriptions for image views -->
    <string name="patient_image">patient image</string>
    <string name="confidence_image">confidence</string>
    <string name="priority">priority</string>
    <string name="video">video</string>

    <!-- profile strings -->
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="office_phone_number">Office Phone Number</string>
    <string name="expected_walk_time">Expected Walk Time</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="address">Address</string>
    <string name="office_address">Office Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="password">Password</string>
    <string name="priority_status">Priority Status</string>
    <string name="re_password">Re-enter Password</string>
    <string name="hidden_password">**********</string>

    <string name="priority_status_off">Off</string>
    <string name="priority_status_on">On</string>

    <string name="last_name_hint">(1 - 20 chars)</string>
    <string name="first_name_hint">(1 - 20 chars)</string>
    <string name="email_hint">(1 - 75 chars)</string>
    <string name="phone_number_hint">(10 digits)</string>
    <string name="office_phone_number_hint">(10 digits)</string>
    <string name="expected_walk_time_hint">(hh:mm:ss)</string>
    <string name="birthday_hint">(mm/dd/yyyy)</string>
    <string name="sex_hint">(m or f)</string>
    <string name="address_hint">(1 - 30 chars)</string>
    <string name="office_address_hint">(1 - 30 chars)</string>
    <string name="city_hint">(1 - 30 chars)</string>
    <string name="state_hint">(2 chars)</string>
    <string name="zip_code_hint">(5 digits)</string>
    <string name="priority_status_hint">(User priority)</string>
    <string name="password_hint">(5 chars, 1 upper, 1 digit)</string>
    <string name="re_password_hint">(Must match password)</string>
    <string name="hidden_password_hint">**********</string>

    <!-- errors -->
    <string name="invalid_query">Invalid search query.</string>
    <string name="query_not_found">Search query cannot be found.</string>
    <string name="no_patients">No patients found.</string>

    <!-- info activities -->
    <string name="welcome">Welcome to\nthe iGait App</string>
    <string name="recover_password">Enter E-mail to\nRecover Password</string>
    <string name="enter_info_register">Enter Information\nto Register</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_info_new_patient">Enter Information\nfor New Patient</string>

</resources>
