<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_patient"
        android:hint="@string/action_new_patient_hint"
        android:icon="@drawable/ic_add_white_48dp"
        android:title="@string/action_new_patient"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:hint="@string/action_search_hint"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:hint="@string/action_user_profile"
        android:icon="@drawable/ic_account_circle_white_48dp"
        android:title="@string/action_user_profile"
        app:showAsAction="always" />

</menu>