<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout01">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayout01"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/EasyGrey" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/editTextUserName"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/editTextPassword"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:textSize="13sp"
                android:background="@color/GameGreen"
                android:textColor="#fff"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Button
                android:id="@+id/buttonRegister" android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="13sp"
                android:background="@color/BookBlue"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Button
                android:id="@+id/buttonForgotPassword"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="#fff"
                android:textSize="13sp"
                android:background="@color/MovieRed"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>