<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout01">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/LinearLayout01">

            <TextView
                android:id="@+id/addPatientTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_info_new_patient"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/EasyGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/last_name"
                android:id="@+id/textViewLastNameCatg"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name"
                android:id="@+id/editTextLastName"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/first_name"
                android:id="@+id/textViewFirstNameCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name"
                android:id="@+id/editTextFirstName"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/email"
                android:id="@+id/textViewEmailCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/editTextEmail"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone_number"
                android:id="@+id/textViewPhoneNumberCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/phone_number"
                android:id="@+id/editTextPhoneNumber"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/expected_walk_time"
                android:id="@+id/textViewExpectedWalkTimeCtg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/expected_walk_time"
                android:id="@+id/editTextExpectedWalkTime"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/birthday"
                android:id="@+id/textViewBirthdayCtg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/birthday"
                android:id="@+id/editTextBirthday"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sex"
                android:id="@+id/textViewSexCtg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sex"
                android:id="@+id/editTextSex"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/address"
                android:id="@+id/textViewAddressCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address"
                android:id="@+id/editTextAddress"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/city"
                android:id="@+id/textViewCityCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/city"
                android:id="@+id/editTextCity"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/state"
                android:id="@+id/textViewStateCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/state"
                android:id="@+id/editTextState"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zip_code"
                android:id="@+id/textViewZipCodeCatg"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/zip_code"
                android:id="@+id/editTextZipCode"
                android:singleLine="true" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="13sp"
                android:background="@color/GameGreen" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>