<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout01">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/LinearLayout01">

            <TextView
                android:id="@+id/retrievePasswordTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/recover_password"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/EasyGrey" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                android:hint="@string/email"
                android:id="@+id/emailEditText"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="13sp"
                android:background="@color/GameGreen"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>